--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "url": "https://github.com/Algorithm-Visualizer-Hub/data-server/issues"
   },
   "homepage": "https://github.com/Algorithm-Visualizer-Hub/data-server#readme",
+  "type": "module",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongoose": "^6.3.1"
   }
 }
